test site update existing stack devv5

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -235,7 +235,7 @@
                   <h3>Lockheed Martin</h3>
                   <p class="info">Information Technology System Administrator <span>&bull;</span> <em class="date">September 2008 - January 2012 </em></p>
                   <p>
-                  <li>Tier 2 and then Tier 3 Support of the IT Services for the Federal Department of Homeland Security</li>
+                  <li>Tier 2 and then Tier 3 Support of the IT Services for the Federal Department of Homeland Security (DHS)</li>
                   </p>
 
                </div>
