prod v20 cloudflare config try again again

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -287,7 +287,7 @@
 
                   <h3>Azure Cosmos Document DB</h3>
                   <p class="info"><em class="date">Some Info</em></p>
-                  <p><a href="https://azure.microsoft.com/en-us/services/cosmos-db/developer-resources/#reference-architectures"> Reference Architectures.</a></p> 
+                  <p><a href="https://azure.microsoft.com/en-us/services/cosmos-db/developer-resources/#reference-architectures"> Reference Architectures</a></p> 
                   <!-- <P><img class="profile-pic"  src="images/certs/microsoft-certified-azure-solutions-architect-expert.1.png" alt="" /></P> -->
                   
 
