prod v1 cloudflare .me works add .net secondary 4

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,7 +64,7 @@
                <span 
                class="txt-rotate "
                data-period="2000"
-               data-rotate='["Cloud Solutions Architect", "Father", "Productive Citizen", "Tinkerer of many things..."]'>
+               data-rotate='["Cloud Solutions Architect", "Father of Josi", "Productive Citizen", "Tinkerer of many things..."]'>
                </span>
              </h4>
              
