--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,7 +56,7 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">Ryan McVey </h1>
+            <h1 class="responsive-headline">Ryan McVey - Cloud Build </h1>
             <!-- <h2 class="responsive-headline">a Cloud Solutions Architect</h2> -->
             
 
